--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "clsx": "^2.0.0",
     "dayjs": "^1.11.9",
     "dayjs-ext": "^2.2.0",
+    "google-auth-library": "^9.0.0",
+    "googleapis": "^126.0.1",
     "lucide-react": "^0.269.0",
     "mongoose": "^7.4.2",
     "next": "13.4.13",
