--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@clerk/backend": "^0.27.0",
     "@clerk/nextjs": "^4.23.2",
     "@clerk/themes": "^1.7.5",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.0.6",
     "@types/node": "20.4.8",
     "@types/react": "18.2.19",
